Make OVS ARP responder feature configurable
Adds NeutronEnableARPResponder parameter to allow enabling the ARP
responder feature in the OVS agent.

Change-Id: Ide82d890ddbd842383255f5c06c186054ec8f97d

--- a/puppet/services/neutron-ovs-agent.yaml
+++ b/puppet/services/neutron-ovs-agent.yaml
@@ -48,6 +48,11 @@ parameters:
     description: |
       Enable support for distributed routing in the OVS Agent.
     type: boolean
+  NeutronEnableARPResponder:
+    default: false
+    description: |
+      Enable ARP responder feature in the OVS Agent.
+    type: boolean
 
 resources:
 
@@ -68,6 +73,7 @@ outputs:
           - get_attr: [NeutronBase, role_data, config_settings]
             neutron::agents::ml2::ovs::l2_population: {get_param: NeutronEnableL2Pop}
             neutron::agents::ml2::ovs::enable_distributed_routing: {get_param: NeutronEnableDVR}
+            neutron::agents::ml2::ovs::arp_responder: {get_param: NeutronEnableARPResponder}
             neutron::agents::ml2::ovs::bridge_mappings:
               str_replace:
                 template: MAPPINGS
