Mv keystone, mongo, manila out of controller.yaml
This patch moves keystone, mongodb, and manila
bind host settings out of controller.yaml and into
composable services.

Change-Id: I1874dc47fffa30606107999da702442badde35c9

--- a/puppet/services/database/mongodb.yaml
+++ b/puppet/services/database/mongodb.yaml
@@ -45,5 +45,12 @@ outputs:
                 dport: 27018
               '103 mongod':
                 dport: 27017
+            # NOTE: bind IP is found in Heat replacing the network name with the
+            # local node IP for the given network; replacement examples
+            # (eg. for internal_api):
+            # internal_api -> IP
+            # internal_api_uri -> [IP]
+            # internal_api_subnet - > IP/CIDR
+            mongodb::server::bind_ip: {get_param: [ServiceNetMap, MongodbNetwork]}
       step_config: |
         include ::tripleo::profile::base::database::mongodb
