--- a/puppet/services/keystone.yaml
+++ b/puppet/services/keystone.yaml
@@ -149,5 +149,16 @@ outputs:
               - 13000
               - 35357
               - 13357
+        # NOTE: bind IP is found in Heat replacing the network name with the
+        # local node IP for the given network; replacement examples
+        # (eg. for internal_api):
+        # internal_api -> IP
+        # internal_api_uri -> [IP]
+        # internal_api_subnet - > IP/CIDR
+        # NOTE: this applies to all 4 bind IP settings below...
+        keystone::admin_bind_host: {get_param: [ServiceNetMap, KeystoneAdminApiNetwork]}
+        keystone::public_bind_host: {get_param: [ServiceNetMap, KeystonePublicApiNetwork]}
+        keystone::wsgi::apache::bind_host: {get_param: [ServiceNetMap, KeystonePublicApiNetwork]}
+        keystone::wsgi::apache::admin_bind_host: {get_param: [ServiceNetMap, KeystoneAdminApiNetwork]}
       step_config: |
         include ::tripleo::profile::base::keystone
