--- a/puppet/services/manila-api.yaml
+++ b/puppet/services/manila-api.yaml
@@ -55,6 +55,13 @@ outputs:
             manila::keystone::auth::admin_url_v2: {get_param: [EndpointMap, ManilaAdmin, uri]}
             manila::keystone::auth::password: {get_param: ManilaPassword }
             manila::keystone::auth::region: {get_param: KeystoneRegion }
+            # NOTE: bind IP is found in Heat replacing the network name with the
+            # local node IP for the given network; replacement examples
+            # (eg. for internal_api):
+            # internal_api -> IP
+            # internal_api_uri -> [IP]
+            # internal_api_subnet - > IP/CIDR
+            manila::api::bind_host: {get_param: [ServiceNetMap, ManilaApiNetwork]}
       step_config: |
         include ::tripleo::profile::base::manila::api
 
