--- a/puppet/services/ceilometer-api.yaml
+++ b/puppet/services/ceilometer-api.yaml
@@ -41,5 +41,12 @@ outputs:
                 dport:
                   - 8777
                   - 13777
+            # NOTE: bind IP is found in Heat replacing the network name with the
+            # local node IP for the given network; replacement examples
+            # (eg. for internal_api):
+            # internal_api -> IP
+            # internal_api_uri -> [IP]
+            # internal_api_subnet - > IP/CIDR
+            ceilometer::api::host: {get_param: [ServiceNetMap, CeilometerApiNetwork]}
       step_config: |
         include ::tripleo::profile::base::ceilometer::api
