Move Redis, Memcached, Sahara, OVS agent out of role templates
Change-Id: I99784b5cfbb741bfc6d1ce9b77e8acf6cf00e073
Related-Bug: 1604414

--- a/puppet/services/database/redis-base.yaml
+++ b/puppet/services/database/redis-base.yaml
@@ -32,6 +32,12 @@ outputs:
         redis::requirepass: {get_param: RedisPassword}
         redis::masterauth: {get_param: RedisPassword}
         redis::sentinel_auth_pass: {get_param: RedisPassword}
+        # NOTE: bind IP is found in Heat replacing the network name with the local node IP
+        # for the given network; replacement examples (eg. for internal_api):
+        # internal_api -> IP
+        # internal_api_uri -> [IP]
+        # internal_api_subnet - > IP/CIDR
+        redis::bind: {get_param: [ServiceNetMap, RedisNetwork]}
         redis::port: 6379
         redis::sentinel::master_name: '"%{hiera(\"bootstrap_nodeid\")}"'
         redis::sentinel::redis_host: '"%{hiera(\"bootstrap_nodeid_ip\")}"'
