--- a/puppet/services/memcached.yaml
+++ b/puppet/services/memcached.yaml
@@ -25,6 +25,12 @@ outputs:
     value:
       service_name: memcached
       config_settings:
+        # NOTE: bind IP is found in Heat replacing the network name with the local node IP
+        # for the given network; replacement examples (eg. for internal_api):
+        # internal_api -> IP
+        # internal_api_uri -> [IP]
+        # internal_api_subnet - > IP/CIDR
+        memcached::listen_ip: {get_param: [ServiceNetMap, MemcachedNetwork]}
         tripleo.memcached.firewall_rules:
           '121 memcached':
             dport: 11211
