--- a/puppet/services/sahara-api.yaml
+++ b/puppet/services/sahara-api.yaml
@@ -54,6 +54,12 @@ outputs:
             sahara::keystone::auth::admin_url: {get_param: [EndpointMap, SaharaAdmin, uri]}
             sahara::keystone::auth::password: {get_param: SaharaPassword }
             sahara::keystone::auth::region: {get_param: KeystoneRegion}
+            # NOTE: bind IP is found in Heat replacing the network name with the local node IP
+            # for the given network; replacement examples (eg. for internal_api):
+            # internal_api -> IP
+            # internal_api_uri -> [IP]
+            # internal_api_subnet - > IP/CIDR
+            sahara::host: {get_param: [ServiceNetMap, SaharaApiNetwork]}
             tripleo.sahara_api.firewall_rules:
               '132 sahara':
                 dport:
