Fix base service type inheriting ceilometer service pcmk templates
Change-Id: Id2227bedee098e0f18704a3dc82fb0be311ff4d2

--- a/puppet/services/pacemaker/ceilometer-agent-notification.yaml
+++ b/puppet/services/pacemaker/ceilometer-agent-notification.yaml
@@ -21,7 +21,7 @@ parameters:
 
 resources:
   CeilometerServiceBase:
-    type: ../ceilometer-base.yaml
+    type: ../ceilometer-agent-notification.yaml
     properties:
       ServiceNetMap: {get_param: ServiceNetMap}
       DefaultPasswords: {get_param: DefaultPasswords}
