--- a/puppet/services/pacemaker/ceilometer-api.yaml
+++ b/puppet/services/pacemaker/ceilometer-api.yaml
@@ -21,7 +21,7 @@ parameters:
 
 resources:
   CeilometerServiceBase:
-    type: ../ceilometer-base.yaml
+    type: ../ceilometer-api.yaml
     properties:
       ServiceNetMap: {get_param: ServiceNetMap}
       DefaultPasswords: {get_param: DefaultPasswords}
