Fix base service type inheriting gnocchi service templates
Change-Id: I5018e4cdb1e5df7c2d67a8c1248d7453941b725f

--- a/puppet/services/pacemaker/gnocchi-statsd.yaml
+++ b/puppet/services/pacemaker/gnocchi-statsd.yaml
@@ -21,7 +21,7 @@ parameters:
 
 resources:
   GnocchiServiceBase:
-    type: ../gnocchi-base.yaml
+    type: ../gnocchi-statsd.yaml
     properties:
       ServiceNetMap: {get_param: ServiceNetMap}
       DefaultPasswords: {get_param: DefaultPasswords}
