--- a/puppet/services/pacemaker/gnocchi-metricd.yaml
+++ b/puppet/services/pacemaker/gnocchi-metricd.yaml
@@ -21,7 +21,7 @@ parameters:
 
 resources:
   GnocchiServiceBase:
-    type: ../gnocchi-base.yaml
+    type: ../gnocchi-metricd.yaml
     properties:
       ServiceNetMap: {get_param: ServiceNetMap}
       DefaultPasswords: {get_param: DefaultPasswords}
