Added DPDK environment file and nic configs samples
Added an environment file to configure DPDK with OVS
by overriding ComputeNeutronOvsAgent. Also added nic
configs for configuring DPDK bridge and bond with
numbered nic format.

Implements: blueprint tripleo-ovs-dpdk
Co-Authored-By: Vijay Chundury <vchundur@redhat.com>
Change-Id: I82b6f66394a8928f8524706c939508edd08afa9b

--- a/puppet/services/neutron-ovs-dpdk-agent.yaml
+++ b/puppet/services/neutron-ovs-dpdk-agent.yaml
@@ -19,13 +19,15 @@ parameters:
                  via parameter_defaults in the resource registry.
     type: json
   NeutronDpdkCoreList:
-    default: ""
     description: List of cores to be used for DPDK Poll Mode Driver
     type: string
+    constraints:
+      - allowed_pattern: "[0-9,-]+"
   NeutronDpdkMemoryChannels:
-    default: ""
     description: Number of memory channels to be used for DPDK
     type: string
+    constraints:
+      - allowed_pattern: "[0-9]+"
   NeutronDpdkSocketMemory:
     default: ""
     description: Memory allocated for each socket
