Move snmp settings into composable services
Provides snmp_readonly_user_* parameters to the base::snmp class
and removes them from the role templates.

Related-bug: #1604414

Co-Authored-By: Giulio Fidente <gfidente@redhat.com>

Change-Id: I35b1ff23baff0c25e742562e1103a3882f7bf767

--- a/puppet/services/snmp.yaml
+++ b/puppet/services/snmp.yaml
@@ -35,8 +35,8 @@ outputs:
     value:
       service_name: snmp
       config_settings:
-        snmpd_readonly_user_name: {get_param: SnmpdReadonlyUserName}
-        snmpd_readonly_user_password: {get_param: SnmpdReadonlyUserPassword}
+        tripleo::profile::base::snmp::snmpd_user: {get_param: SnmpdReadonlyUserName}
+        tripleo::profile::base::snmp::snmpd_password: {get_param: SnmpdReadonlyUserPassword}
         tripleo.snmp.firewall_rules:
           '127 snmp':
             dport: 161
